Fixed the legibility of the placeholder.
In night mode, it looks fine but in normal mode,
it is hardly legible. Made it less transparent.

--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -38,5 +38,5 @@
 }
 
 .search-field::placeholder {
-  color: #8884;
+  color: #888a;
 }
